clusters/crc-ambient/overlays/istio-system-configs/patch-delete-peerauthentication-default.yaml
$patch: delete
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
