clusters/crc-ambient/overlays/istio-system-configs/authorizationpolicy-allow-nothing-istio-waypoint.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing-istio-waypoint
  namespace: istio-system
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: GatewayClass
    name: istio-waypoint
